--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
 ConsoleApp/
-
+PayrollLibrary/PayrollDB.db
 
 # User-specific files
 *.rsuser
