--- a/WinFormGUI/WinFormGUI.csproj
+++ b/WinFormGUI/WinFormGUI.csproj
@@ -12,4 +12,8 @@
     <ProjectReference Include="..\PayrollLibrary\PayrollLibrary.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Properties\DataSources\" />
+  </ItemGroup>
+
 </Project>
